Fully implemented MeteorShower event card