@@ -18,17 +18,21 @@ import java.util.stream.Collectors;
 import static it.polimi.ingsw.is25am28.Connector.*;
 
 public class Ship {
-    private final static Map<Integer, Pair<Pair<Integer, Integer>, Pair<Integer, Integer>>> dimensionsAndOffsets = new HashMap<>() {{
-        dimensionsAndOffsets.put(1, new Pair<>(new Pair<>(5, 7), new Pair<>(0, 0)));    // Level 1 ship dimensions + (row, col) offsets
-        dimensionsAndOffsets.put(2, new Pair<>(new Pair<>(5, 7), new Pair<>(0, 0)));    // Level 2 ship dimensions + (row, col) offsets
-        dimensionsAndOffsets.put(3, new Pair<>(new Pair<>(5, 7), new Pair<>(0, 0)));    // Level 3 ship dimensions + (row, col) offsets
+    private final static Map<Integer, Pair<Integer, Integer>> shipDimensions = new HashMap<>() {{
+        shipDimensions.put(1, new Pair<>(5, 5));
+        shipDimensions.put(2, new Pair<>(5, 7));
+        shipDimensions.put(3, new Pair<>(6, 9));
+    }};
+
+    private final static Map<Integer, Pair<Integer, Integer>> rowColOffsets = new HashMap<>() {{
+        rowColOffsets.put(1, new Pair<>(5, 4));
+        rowColOffsets.put(2, new Pair<>(5, 4));
+        rowColOffsets.put(3, new Pair<>(4, 3));
     }};
 
     private final int difficultyLevel;
-    private final int grid_rows;
-    private final int grid_cols;
-    private final int rowOffset;
-    private final int colOffset;
+    private final int grid_rows = 12;
+    private final int grid_cols = 12;
     private Component[][] components;
 
     // All components are sorted into their matching category,
@@ -42,58 +46,31 @@ public class Ship {
     private final List<Vital> vitalList;
 
     // Constructor #1 - Generates one of the three possible grids, each for its level
-    public Ship(int difficultyLevel) {
+    public Ship(int difficultyLevel) throws IllegalArgumentException {
+        int maxDifficulty = 3;
+        int minDifficulty = 1;
+
+        if (minDifficulty > difficultyLevel || difficultyLevel > maxDifficulty) {
+            throw new IllegalArgumentException(
+                    "ERROR: Difficulty " + difficultyLevel + " does not exist\n"
+                  + "(minDifficulty=" + minDifficulty + ", maxDifficulty=" + maxDifficulty + ")."
+            );
+        }
+
         this.difficultyLevel = difficultyLevel;
-        this.grid_rows = dimensionsAndOffsets.get(difficultyLevel).getKey().getKey();
-        this.grid_cols = dimensionsAndOffsets.get(difficultyLevel).getKey().getValue();
-        this.rowOffset = dimensionsAndOffsets.get(difficultyLevel).getValue().getKey();
-        this.colOffset = dimensionsAndOffsets.get(difficultyLevel).getValue().getValue();
         this.components = initGrid(this.grid_rows, this.grid_cols);
 
         // Initializing the connectors of the core cabin
         int[] coreConnectors = new int[4];
-        coreConnectors[0] = coreConnectors[1] = coreConnectors[2] = coreConnectors[3] = THREE_PIPES.ordinal();
+        coreConnectors[0] = THREE_PIPES.ordinal();
+        coreConnectors[1] = THREE_PIPES.ordinal();
+        coreConnectors[2] = THREE_PIPES.ordinal();
+        coreConnectors[3] = THREE_PIPES.ordinal();
 
         // Creating the ship's core cabin
         Cabin core = new Cabin(
-                this.grid_rows / 2,
-                this.grid_cols / 2,
-                0,
-                coreConnectors,
-                true
-        );
-
-        // Adding the core component as the first component in the ship's grid
-        this.addComponent(core, core.getPosition()[0], core.getPosition()[1]);
-
-        // Instantiating each component list as an empty list
-        batteryList = new ArrayList<Battery>();
-        cabinList = new ArrayList<Cabin>();
-        cannonList = new ArrayList<Cannon>();
-        engineList = new ArrayList<Engine>();
-        shieldList = new ArrayList<Shield>();
-        storageList = new ArrayList<Storage>();
-        vitalList = new ArrayList<Vital>();
-    }
-
-    // Constructor #2 - Generates the ship's grid based on the given dimensions
-    // Mostly used in testing, since the real game only uses the constructor above
-    public Ship(int difficultyLevel, int grid_rows, int grid_cols, int rowOffset, int colOffset) {
-        this.difficultyLevel = difficultyLevel;
-        this.grid_rows = grid_rows;
-        this.grid_cols = grid_cols;
-        this.rowOffset = rowOffset;
-        this.colOffset = colOffset;
-        this.components = initGrid(this.grid_rows, this.grid_cols);
-
-        // Initializing the connectors of the core cabin
-        int[] coreConnectors = new int[4];
-        coreConnectors[0] = coreConnectors[1] = coreConnectors[2] = coreConnectors[3] = THREE_PIPES.ordinal();
-
-        // Creating the ship's core cabin
-        Cabin core = new Cabin(
-                this.grid_rows / 2,
-                this.grid_cols / 2,
+                6,
+                6,
                 0,
                 coreConnectors,
                 true
@@ -123,22 +100,22 @@ public class Ship {
         traverse(
             (Component c) -> {
                 switch (c) {
-                    case Battery battery:   this.batteryList.add(battery);
-                                            break;
-                    case Cabin cabin:       this.cabinList.add(cabin);
-                                            break;
-                    case Cannon cannon:     this.cannonList.add(cannon);
-                                            break;
-                    case Engine engine:     this.engineList.add(engine);
-                                            break;
-                    case Shield shield:     this.shieldList.add(shield);
-                                            break;
-                    case Storage storage:   this.storageList.add(storage);
-                                            break;
-                    case Vital vital:       this.vitalList.add(vital);
-                                            break;
-                    case Structural struct: // Structural components are not sorted
-                                            break;
+                    case Battery battery:       this.batteryList.add(battery);
+                                                break;
+                    case Cabin cabin:           this.cabinList.add(cabin);
+                                                break;
+                    case Cannon cannon:         this.cannonList.add(cannon);
+                                                break;
+                    case Engine engine:         this.engineList.add(engine);
+                                                break;
+                    case Shield shield:         this.shieldList.add(shield);
+                                                break;
+                    case Storage storage:       this.storageList.add(storage);
+                                                break;
+                    case Vital vital:           this.vitalList.add(vital);
+                                                break;
+                    case Structural structural: // Structural components are not sorted
+                                                break;
                     default:
                         throw new IllegalStateException("Unexpected class type " + c.toString());
                 }
@@ -155,18 +132,26 @@ public class Ship {
     }
 
     /**
+     * @return A pair of integers that represent the dimensions (row, col) of the ship based on the given difficulty
+     *         (NOTE: It's not the same as the grid's dimensions)
+     */
+    public Pair<Integer, Integer> getShipDimensionsByDifficulty(int difficultyLevel) {
+        return Ship.shipDimensions.get(difficultyLevel);
+    }
+
+    /**
+     * @return A pair of integers that represent the offsets (row, col) of the ship's placement
+     *         with respect to the ship's grid, based on the given difficulty
+     */
+    public Pair<Integer, Integer> getOffsetsByDifficulty(int difficultyLevel) {
+        return Ship.rowColOffsets.get(difficultyLevel);
+    }
+
+    /**
      * @return The ship's difficulty level
      */
     public int getDifficultyLevel() {
         return this.difficultyLevel;
-    }
-
-    /**
-     * @return A pair of integers that represent the offsets (rowOffset, colOffset) between
-     *         the physical board indexing and the internal Component matrix indexing
-     */
-    public Pair<Integer, Integer> getOffsets() {
-        return new Pair<Integer, Integer>(this.rowOffset, this.colOffset);
     }
 
     /**
@@ -195,14 +180,32 @@ public class Ship {
     public List<Shield> getShieldList() { return this.shieldList; }
 
     /**
-     * @return The list of Storages present on the ship
+     * @return The list of Storage units present on the ship
      */
     public List<Storage> getStorageList() { return this.storageList; }
 
     /**
-     * @return The list of Engines present on the ship
+     * @return The list of Vital units present on the ship
      */
     public List<Vital> getVitalList() { return this.vitalList; }
+
+    /**
+     * @return The list of DoubleEngines present on the ship
+     */
+    public List<Engine> getDoubleEngines() {
+        return this.engineList.stream()
+                .filter(e -> e.getSpeed() == 2)
+                .toList();
+    }
+
+    /**
+     * @return The list of DoubleCannons present on the ship
+     */
+    public List<Cannon> getDoubleCannons() {
+        return this.cannonList.stream()
+                .filter(c -> c.getFirePower() == 2)
+                .toList();
+    }
 
     /**
      * @return The ship's available energy
@@ -240,27 +243,120 @@ public class Ship {
     public List<Lifeform> getAllLifeforms() {
         return this.cabinList.stream()
                 .flatMap(cabin -> cabin.getInhabitants().stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * @return The ship's total firepower, including the
-     *         double cannons that the user chooses to activate
+     * Returns the real firepower by considering the baseline firepower (given by single cannons) and
+     * the additional firepower (given by activating the given amount of double cannons)<br>
+     *
+     * Also, <code>doubleCannonsToActivate</code> corresponds to the amount of batteries to consume, but if that value
+     * exceeds the actual amount of double cannons present on the ship, then the amount of batteries consumed will be
+     * equal to the amount of all the double cannons present on the ship, thus preserving the difference.
+     *
+     * @param doubleCannonsToActivate The amount of double cannons to activate.<br>
+     *          In particular, we have two distinct cases:
+     *          <ul>
+     *              <li>
+     *                  If its value is set to <code>0</code>, then no double cannons are activated and thus the
+     *                  resulting firepower is the baseline firepower given only by the single cannons
+     *              </li>
+     *              <li>
+     *                  If its value is <code>> 0</code>, then it returns the baseline firepower plus <code>2 * doubleCannonsToActivate</code>
+     *                  and, in case <code>doubleCannonsToActivate</code> is greater than the actual amount of double cannons, then
+     *                  the resulting firepower is the baseline firepower plus all the available double cannons activated.
+     *              </li>
+     *          </ul>
+     *
+     * @return The ship's total firepower of both single and double cannons
      */
-    public float getFirePower() {
-        return (float) this.cannonList.stream()
-                .mapToDouble(Cannon::getFirePower)
-                .sum();
+    public float getFirePower(int doubleCannonsToActivate) {
+        List<Cannon> doubleCannonList;
+        int doubleCannonAmount;
+        float totalFirePower;
+
+        doubleCannonList = this.getDoubleCannons();
+        doubleCannonAmount = doubleCannonList.size();
+
+        // Verifying that the current ship has enough energy
+        // to activate the required amount of double cannons
+        // If not, all the remaining batteries are used to activate
+        // some of the requested double cannons
+
+        // Calculating the totalFirePower
+        float singleCannonsFirePower = (float) this.cannonList.stream()
+                    .filter((Cannon c) -> (c.getFirePower() < 2))
+                    .mapToDouble(Cannon::getFirePower)
+                    .sum();
+
+        if (doubleCannonAmount >= doubleCannonsToActivate) {
+            totalFirePower = singleCannonsFirePower
+                    + (doubleCannonsToActivate * doubleCannonList.getFirst().getFirePower());
+        }
+        else {
+            totalFirePower = singleCannonsFirePower
+                    + (doubleCannonAmount * doubleCannonList.getFirst().getFirePower());
+        }
+
+        // Consuming the amount of batteries required to activate
+        // the given amount of double cannons
+        this.consumeEnergy(doubleCannonsToActivate);
+
+        return totalFirePower;
     }
 
     /**
-     * @return The ship's total engine power, including the
-     *         double engines that the user chooses to activate
+     * Returns the real firepower by considering the baseline firepower (given by single cannons) and
+     * the additional firepower (given by activating the given amount of double cannons)<br>
+     *
+     * Also, <code>doubleEnginesToActivate</code> corresponds to the amount of batteries to consume, but if that value
+     * exceeds the actual amount of double engines present on the ship, then the amount of batteries consumed will be
+     * equal to the amount of all the double engines present on the ship, thus preserving the difference.
+     *
+     * @param doubleEnginesToActivate The amount of double engines to activate.<br>
+     *          In particular, we have two distinct cases:
+     *          <ul>
+     *              <li>
+     *                  If its value is set to <code>0</code>, then no double engines are activated and thus the
+     *                  resulting engine power is the baseline engine power given only by the single engines
+     *              </li>
+     *              <li>
+     *                  If its value is <code>> 0</code>, then it returns the baseline engine power plus <code>2 * doubleEnginesToActivate</code>
+     *                  and, in case <code>doubleEnginesToActivate</code> is greater than the actual amount of double engines, then
+     *                  the resulting engine power is the baseline engine power plus all the available double engines activated.
+     *              </li>
+     *          </ul>
+     *
+     * @return The ship's total engine power of both single and double engines
      */
-    public int getEnginePower() {
-        return (int) this.engineList.stream()
-                .mapToDouble(Engine::getSpeed)
-                .sum();
+    public int getEnginePower(int doubleEnginesToActivate) {
+        List<Engine> doubleEngineList;
+        int doubleEngineAmount;
+        int totalEnginePower;
+
+        doubleEngineList = this.getDoubleEngines();
+        doubleEngineAmount = doubleEngineList.size();
+
+        // Calculating the totalEnginePower
+        int singleEnginesEnginePower = (int) this.cannonList.stream()
+                    .filter((Cannon c) -> (c.getFirePower() < 2))
+                    .mapToDouble(Cannon::getFirePower)
+                    .sum();
+
+        if (doubleEngineAmount >= doubleEnginesToActivate) {
+            totalEnginePower = singleEnginesEnginePower
+                    + (doubleEnginesToActivate * (int) doubleEngineList.getFirst().getSpeed());
+        }
+        else {
+            totalEnginePower = singleEnginesEnginePower
+                    + (doubleEngineAmount * (int) doubleEngineList.getFirst().getSpeed());
+        }
+
+        // Consuming the amount of batteries required to activate
+        // the given amount of double engines
+        this.consumeEnergy(doubleEnginesToActivate);
+
+        return totalEnginePower;
     }
 
     /**
@@ -282,7 +378,6 @@ public class Ship {
                 .sum();
     }
 
-    // TODO: Implemented by Andrea, ask what is its purpose
     /**
      * @return All components that fail the <code>check()</code> method
      */
@@ -298,6 +393,48 @@ public class Ship {
         );
 
         return wrongs;
+    }
+
+    /**
+     * @param index The index of the row to extract
+     *
+     * @return The grid's row with the given index
+     */
+    public Component[] getGridRow(int index) throws OutOfGridException {
+        Component[] row;
+
+        if (index < 0 || index >= this.grid_rows) {
+            throw new OutOfGridException("ERROR: Given index is out of grid");
+        }
+
+        row = new Component[this.grid_cols];
+
+        for (int i = 0; i < this.grid_cols; i++) {
+            row[i] = this.components[index][i];
+        }
+
+        return row;
+    }
+
+    /**
+     * @param index The index of the column to extract
+     *
+     * @return The grid's column with the given index
+     */
+    public Component[] getGridColumn(int index) throws OutOfGridException {
+        Component[] column;
+
+        if (index < 0 || index >= this.grid_cols) {
+            throw new OutOfGridException("ERROR: Given index is out of grid");
+        }
+
+        column = new Component[this.grid_rows];
+
+        for (int i = 0; i < this.grid_rows; i++) {
+            column[i] = this.components[i][index];
+        }
+
+        return column;
     }
 
     /**
@@ -508,6 +645,7 @@ public class Ship {
         this.components[i][j] = component;
     }
 
+    // TODO: Modify to take into account the fact that the disconnected pieces need to be tracked (for currency)
     /**
      * Removes the component at coordinates (i, j) from the ship's grid.<br>
      * If that component, when removed, divides the ship into 2 or more branches, then the
